<resources>
    <string name="app_name">Reservation Form</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="pax">Pax</string>
    <string name="enteryourname">Enter Your Name</string>
    <string name="enteryourmobile">Enter Your Mobile Number</string>
    <string name="enteryourpax">Enter Number Of People</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="smoking">Smoking Area</string>
    <string name="baby">Baby Chair</string>
</resources>